--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "clsx": "^2.1.1",
     "gojs": "^3.0.16",
     "init": "^0.1.2",
+    "katex": "^0.16.19",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-katex": "^3.0.1",
     "react-router-dom": "^7.1.1",
     "shadcn": "^2.1.8",
     "tailwind-merge": "^2.6.0",
